# renovate-pdm-repro

./: .pdm-python  pyproject.toml
example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
