[project]
name = "example"
version = "0.1.0"

requires-python = ">=3.11"
# Runtime dependencies
dependencies = [
    "uvicorn==0.30.4",
    "python-multipart==0.0.9",
    "jinja2==3.1.4",
    "pyctuator==1.2.0",
    "psutil==6.0.0",
    "aiofiles==24.1.0",
    "SQLAlchemy==2.0.31",
    "fastapi==0.111.1",
    "asyncpg==0.29.0",
    "greenlet==3.0.3",
    "aioboto3==13.1.1",
    "alembic==1.13.2",
    "pyhumps==3.8.0",
    "pyyaml==6.0.1",
    "pydantic-settings==2.4.0",
    "blinker==1.8.2",
    "ddtrace==2.10.1",
    "ordered-set==4.1.0",
    "beautifulsoup4==4.12.3",
    "aiokafka==0.11.0",
    "googleapis-common-protos==1.63.2",
    "tenacity==9.0.0",
    "datadog==0.49.1",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "python-dotenv==1.0.1",
    "pytest==8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio==0.21.1",
    "faker==27.0.0",
    "pytest-cov==5.0.0",
    "pytest-sugar==1.0.0",
    "testcontainers==4.7.2",
    "confluent-kafka>=2.5.0",
    "cryptography>=43.0.0",
    "pytest-html>=4.1.1",
]
lint = [
    "ruff==0.5.5",
]
typecheck = [
    "mypy==1.11.1",
    "types-aiofiles>=24.1.0.20240626",
    "types-sqlalchemy-utils>=1.1.0",
    "types-aioboto3>=13.1.1",
    "types-PyYAML>=6.0.12.20240724",
    "types-beautifulsoup4>=4.12.0.20240511",
    "types-aiobotocore-sqs>=2.13.1",
    "types-aiobotocore-s3>=2.13.1",
    "types-protobuf>=5.27.0.20240626",
]
